# adversary-emulation

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  app.py  cmd_line_over_network.py  docker-compose.yml  injector.py  requirements.txt  vm_drivers.py
c2/: c2_actions.py  c2_facts.py  c2_operations.py  c2_server.py  concrete_actions.py  concrete_operations.py  concrete_parsers.py  connection.py  makeminidump.py  specific_operations.py
c2/connections/: connections.json
c2/connections/frontend/: index.css
c2/connections/upload_dir/: ransom_message.txt  schtask.xml  update.ps1
config/: conf_manager.py  config.json
devmem2/: Makefile  README.md  call_shmem.py  devmem2.c  shmem2.c  shmem2_shared.c
kernel_shellcode_library/: README.md  change_ntoskrnl_base_addr.sh  customize_shellcode.py  inspect.sh  offsets.json  shellcode_patching.py  truncate.py
kernel_shellcode_library/SassyKitdi-master/: README.md
kernel_shellcode_library/SassyKitdi-master/src/: socketdump.py
kernel_shellcode_library/SassyKitdi-master/src/common/ntfs/: Cargo.toml
kernel_shellcode_library/SassyKitdi-master/src/common/ntreg/: Cargo.toml
kernel_shellcode_library/SassyKitdi-master/src/common/ntuser/: Cargo.toml
kernel_shellcode_library/SassyKitdi-master/src/payloads/enhanced_second_stage_with_usermode/: Cargo.toml  inspect.sh  pyit.sh
kernel_shellcode_library/SassyKitdi-master/src/payloads/enhanced_second_stage_with_usermode/src/: lib.rs
kernel_shellcode_library/SassyKitdi-master/src/payloads/first_stage/: Cargo.toml  inspect.sh  pyit.sh
kernel_shellcode_library/SassyKitdi-master/src/payloads/first_stage/src/: lib.rs
kernel_shellcode_library/SassyKitdi-master/src/payloads/sassykitdi/: Cargo.toml
misc/: volatility
templates/: base.html  connections.html  error.html  index.html  listdir.html  upload.html
vm/: README.md  win10-3.xml
volatility_symbols/windows/ntkrnlmp.pdb/: 5D6312DA6921E3A4E7F938B88330B077-1.json.xz  84A84F4D2218BC053913B1204942618D-1.json.xz  CA8E2F01B822EDE6357898BFBF862997-1.json.xz  DCD0B9772B46C59FF6E45DFBB3D1AE7B-1.json.xz
(+15 files in other folders)
