[package]
name = "kloader"
version = "0.1.0"
authors = ["zerosum0x0", "shotokhan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kloader"
crate-type = ["cdylib"]

[profile.dev]
opt-level = 'z' # optimize for size
lto = true  # link time optimize
codegen-units = 1
panic = "abort"
debuginfo = 0

[profile.release]
opt-level = 'z' # optimize for size
lto = true  # link time optimize
codegen-units = 1
panic = "abort"
debuginfo = 0

[dependencies]
ntdef       =   { path = "../../common/ntdef",      version = "0.1.0" }
